2011-05-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Parse and filter stdout/stderr of
	  commands.

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: the prototype for str_keyword() was defined
	  twice, remove one definition

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/krb5-security.c: use cpp's #error to signal the lack of
	  atexit()

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/genversion.c: use do { ... } while(0) to #define
	  the startline() macro

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/cmdline.c: [GLib] rewrite
	  cmdline_format_dumpspec_components() using a GPtrArray and
	  g_strjoinv()

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* client-src/sendbackup-dump.c, common-src/debug.c,
	  common-src/krb5-security.c, common-src/security-util.c,
	  recover-src/amrecover.c, recover-src/extract_list.c,
	  server-src/dumper.c, server-src/planner.c: use newstralloc() where
	  possible instead of /^newvstrallocf?/()

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/debug.c: remove tests for failled allocations and allocate
	  directly, failed allocations would make the program abort anyway

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/amanda.h, common-src/alloc.c: remove dead function and
	  prototypes of newalloc()

2011-05-23  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/arglist.h: remove
	* common-src/amanda.h: define the arglist_{start,val,end} macros here
	* various *.[ch]: redeclare header/static function prototypes using
	  G_GNUC_PRINTF()

2011-05-22  Dustin J. Mitchell <dustin@mozilla.com>
	* installchecks/Amanda_Config.pl: add columnspec validation tests

2011-05-22  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: implement columnspec validation
	* server-src/amcheck.c: remove columnspec validation in
	  start_server_check()